allprojects {
    group 'me.darknet'
    version '2.0.0'
}

subprojects {
    apply plugin: 'java-library'

    repositories {
        mavenCentral()
        mavenLocal()
        maven { url 'https://jitpack.io' }
    }

    apply plugin: 'maven-publish'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    test {
        useJUnitPlatform()

        testLogging {
            events "passed", "skipped", "failed"
        }
        jvmArgs '--enable-preview'
    }

    dependencies {
        // jetbrains annotations
        implementation 'org.jetbrains:annotations:22.0.0'
    }

    publishing {
        repositories {
            mavenLocal()
            maven {
                name = 'sources-repo'
                url = 'file:///tmp/sources-repo'
            }
        }
        publications {
            maven(MavenPublication) {
                from components.java
            }
        }
    }

    plugins.withType(JavaPlugin).configureEach {
        dependencies {
            testImplementation platform('org.junit:junit-bom:5.9.1')
            testImplementation 'org.junit.jupiter:junit-jupiter'
        }
    }

    tasks.withType(JavaCompile)*.options*.compilerArgs*.add '--enable-preview'

}